# masterThesis

./: 2dDetection.cpp  3D_detection.cpp  3D_detection.h  AddTask.h  Addtask.cpp  BaseTask.h  CMakeLists.txt  CMakeLists.txt.user.d4ffcc6  Database.cpp  Database.h  Detection2D.cpp  Detection3D.cpp  Detection3D.h  FindTask.cpp  FindTask.h  PhotoProcessing.h  README.md  Result.h  Task.h  TaskFunctions.cpp  TaskFunctions.h  TaskManager.cpp  TaskManager.h  TaskPreparer.cpp  TaskPreparer.h  UpdateTask.cpp  UpdateTask.h  addBox.cpp  addTask.h  addtask.cpp  box.h  database.cpp  database.h  detection2D.cpp  detection2D.h  dimensionMatching.cpp  dimensionMatching.h  errorManager.cpp  errorManager.h  findCases.h  (+16 more)
SQL_dump/: thesis_dump.sql
